Add new 'sepi' section with contact details
Added a new word group for 'Connect' with additional contact information.

--- a/res2.html
+++ b/res2.html
@@ -60,7 +60,7 @@
         .w6 { font-size: 5.5em; } /* EDUCATION */
         .w7 { font-size: 7em; }   /* PROJECTS */
         .w8 { font-size: 6em; }   /* CONTACT */
-
+        .w9 { font-size: 6.5em; }   /* CONTACT */
         /* Bubble Logic */
         .bubble {
             position: absolute;
@@ -187,6 +187,15 @@
             <p>📍 Salem, TN, India</p>
         </div>
     </div>
+
+    <div class="word-group">
+        <span class="word w9">Connect</span>
+        <div class="bubble left-bubble">
+            <h4>sepicle</h4>
+            <p>vibe coding</p>
+        </div>
+    </div>
 </div>
 </body>
+
 </html>
